--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "electron-store": "^8.1.0",
     "firebase": "^9.15.0",
     "firebase-admin": "^11.4.1",
+    "react-icons": "^4.7.1",
     "tailwind-styled-components": "^2.2.0"
   },
   "devDependencies": {
