--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@firebase/auth-types": "^0.12.0",
+    "@types/lodash": "^4.14.191",
     "date-fns": "^2.29.3",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.1.0",
     "firebase": "^9.15.0",
     "firebase-admin": "^11.4.1",
+    "lodash": "^4.17.21",
     "react-icons": "^4.7.1",
+    "react-spinners": "^0.13.7",
     "tailwind-styled-components": "^2.2.0"
   },
   "devDependencies": {
